# FastAPI-tutorial

./: README.md  pyproject.toml
src/fastapi_tutorial/: __init__.py  main.py
