[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi[all]>=0.101.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pyproject-flake8>=5.0.4.post1",
]

[tool.hatch.metadata]
allow-direct-references = true

# 以下各フォーマッター・リンターの詳細設定
[tool.black]
# 最大文字数 指定文字数を超えたら改行
line_length = 80

[tool.flake8]
# blackのline_lengthに合わせてください
max-line-length = 80
# 警告非表示一覧
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"

[tool.mypy]
# エラー時のメッセージを詳細表示
show_error_context = true
# エラー発生箇所の行数/列数を表示
show_column_numbers = true
# サードパーティ製モジュールの型チェックを無視
ignore_missing_imports = true
# 関数の引数/戻り値に型指定必須
disallow_untyped_defs = true
# デフォルト引数にNoneを取る場合、型アノテーションにOptional必須
no_implicit_optional = true
# 戻り値がAny型ではない関数の戻り値がAny型のとき警告
warn_return_any = true
# 冗長なキャストに警告
warn_redundant_casts = true
